[package]
name = "dynamodb_data"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyn/dynamodb_data"
description = "Serde based serialization support and misc utilities for working with Dynamodb via the `rusoto_dynamodb` crate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.40"
rusoto_core = "0.40.0"
rusoto_dynamodb = "0.40.0"

