[package]
name = "dynamodb_data"
version = "0.1.1"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyn/dynamodb_data"
homepage = "https://github.com/mockersf/serde_dynamodb"
description = "Serde based serialization support and misc utilities for working with Dynamodb via the `rusoto_dynamodb` crate"
keywords = ["serde", "dynamodb", "rusoto"]
readme = "README.md"

[dependencies]
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.40"
rusoto_core = "0.40.0"
rusoto_dynamodb = "0.40.0"

